Fix followup display when 0 followups
Unit base momento